syntax = "proto3";

option csharp_namespace = "GrpcTodoService";

service TodoAnalytics {
  rpc GetStats (StatsRequest) returns (StatsResponse);
}

message StatsRequest {}

message StatsResponse {
  int32 active_tasks = 1;
  int32 completed_tasks = 2;
}
